# Yaseenm237-app

./: ARCHITECTURE.md  COMMUNITY_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  SETUP_APK.md  add_drawer_offset_ui.py  add_drawer_offset_ui2.py  add_pdf_export.py  build-apk.bat  build-apk.sh  buildozer.spec  button_patch.txt  capacitor.config.json  capacitor.config.ts  check_ui.py  fix.js  fix_compare.js  fix_data.py  fix_deps.py  fix_drawer_y.py  fix_drawer_y2.py  fix_gravity.js  fix_pdf.py  fix_report.py  fix_settings.js  fix_share.py  fix_svg.py  fix_svg.sh  fix_svg2.sh  fix_types.js  fix_useCarpentryEngine.py  fix_visualizer.js  fix_visualizer.py  fix_worker.py  fix_workspace2.py  generate_packer.py  index.html  (+37 more)
.github/workflows/: build.yml
android/: build.gradle
android/app/: build.gradle
docs/: system_logic_matrix.md
packing_engine/: Cargo.toml
packing_engine/pkg/: package.json  packing_engine.d.ts  packing_engine.js  packing_engine_bg.wasm  packing_engine_bg.wasm.d.ts
packing_engine/src/: lib.rs
patches/: README.md  button_patch.txt  lines.txt  patch.txt
scripts/algorithms/: README.md  move_bounds.py  move_calc.py  remove_auto_calc.py  replace_table.py  update_algo.py
scripts/builders/: README.md
scripts/ui-fixes/: README.md  add_drawer_offset_ui.py  add_drawer_offset_ui2.py  fix_drawer_y.py  fix_drawer_y2.py  fix_svg.py  fix_useCarpentryEngine.py
src/: App.tsx  chat_system.rs  data.ts  icons.ts  index.css  main.rs  types.ts  worker.ts
tests/: README.md
ui_mapping/: COMPLETE_UI_BLUEPRINT.md  UI_FLOW_MAP.md
(+67 files in other folders)
