[package]
name = "packing_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true

[profile.dev]
opt-level = 0
debug = false
incremental = false
